--- a/about.html
+++ b/about.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Basics</title>
+    <title>About HTML</title>
 </head>
 <body>
     <div>
-        <a href="https://www.netflix.com/in/Login" target="_blank"> Netflix Login</a>
-        <a href="./about.html">Amazon Sign up</a>
+        <a href="https://www.primevideo.com/offers/nonprimehomepage/ref=dv_web_force_root">Amazon Sign up</a>
     </div>
 </body>
 </html>
